--- a/react/index.html
+++ b/react/index.html
@@ -21,37 +21,69 @@
   <!-- Your custom script here -->
   <script type="text/babel">
     const root = document.getElementById("root");
-    /* const Span = () => (
-         <h3 id="title" onMouseEnter={() => console.log("Mouse Enter")}>
-           Hello, Title
-         </h3>
-       );
-
-       function Btn() {
-         return (
-           <button
-             className="btn"
-             onClick={() => console.log("Button is Clicked")}
-             style={{
-               backgroundColor: "skyblue",
-             }}
-           >
-             Click Me
-           </button>
-         );
-       }
-    */
-    let counter = 10;
-    function counterUp() {
-      counter = counter + 1;
-      ReactDOM.render(<Container />, root);
-    }
-    const Container = () => (
-      <div>
-        <h3>Hello This is Title {counter}</h3>
-        <button onClick={counterUp}>Click Me</button>
-      </div>
-    );
+    const Km2Mile = () => {
+      return <h3>Km 2 Mile</h3>;
+    };
+    const MinutesToHours = () => {
+      const [amount, setAmount] = React.useState(0);
+      const [inverted, setFlip] = React.useState(false);
+      const onchange = (event) => {
+        setAmount(event.target.value);
+      };
+      const reset = () => {
+        setAmount(0);
+      };
+      const onInverted = () => {
+        reset();
+        setFlip((current) => !current);
+      };
+      return (
+        <div>
+          <label htmlFor="minutes" />
+          <input
+            value={!inverted ? amount * 60 : amount}
+            id="minutes"
+            placeholder="Minutes"
+            type="text"
+            onChange={onchange}
+            disabled={!inverted}
+          />
+          <label htmlFor="hours" />
+          <input
+            value={inverted ? amount / 60 : amount}
+            id="hours"
+            placeholder="Hours"
+            type="text"
+            onChange={onchange}
+            disabled={inverted}
+          />
+          <button onClick={reset}>reset</button>
+          <button onClick={onInverted}>
+            {inverted ? "Invert" : "Turn Back"}
+          </button>
+        </div>
+      );
+    };
+    const Container = () => {
+      const [index, setIndex] = React.useState("default");
+      const onSelect = (event) => {
+        setIndex(event.target.value);
+      };
+      return (
+        <div>
+          <h3>Super Converter</h3>
+          <select onChange={onSelect}>
+            <option value="default">Select Option</option>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">Km & Miles</option>
+          </select>
+          <br />
+          {index == "default" ? "Please Select Option" : null}
+          {index == 0 ? <MinutesToHours /> : null}
+          {index == 1 ? <Km2Mile /> : null}
+        </div>
+      );
+    };
     ReactDOM.render(<Container />, root);
   </script>
 </html>
